--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,11 @@
 <html lang='en'>
   <head>
     <meta charset='utf-8' />
-    <!-- <link href='../node_modules/fullcalendar/main.css' rel='stylesheet' /> -->
+    <link href='../node_modules/fullcalendar/main.css' rel='stylesheet' />
     <!-- <script src='../node_modules/fullcalendar/main.js'></script> -->
   </head>
   <body>
-    <script src='index.js'></script>
+    <script src='../dist/index.js'></script>
     <div id='calendar'></div>
     <p>paragraph!</p>
   </body>
