--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
   <body>
     <script src='dist/bundle.js'></script>
     <div id='calendar'></div>
+    <div id='external-events'>
+      <div class='fc-event'>Event</div>
+    </div>
   </body>
 </html>
