--- a/index.html
+++ b/index.html
@@ -8,8 +8,6 @@
   <body>
     <script src='dist/bundle.js'></script>
     <div id='calendar'></div>
-    <div id='external-events'>
-      <div class='fc-event'>Event</div>
-    </div>
+    <div id='external-events'></div>
   </body>
 </html>
